<resources>
    <string name="app_name">UHGHackathon</string>
    <string name="test">TEST</string>
    <string name="title_activity_precheck_claim">PrecheckClaim</string>
    <string name="title_activity_pre_check">PreCheck</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="emailnew">Email:</string>
    <string name="gender">Gender:</string>
    <string name="personal_information">Personal Information</string>
    <string name="edit_info">Edit Info</string>
    <string name="sign_out">Sign Out</string>
    <string name="_09_27_1941">09/27/1941</string>
    <string name="spiderpig_optum_com">spiderpig@optum.com</string>
    <string name="peter">Peter</string>
    <string name="parker">Parker</string>
    <string name="male">Male</string>
    <string name="last_name2">Last Name:</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="time_of_visit">Time of Visit</string>
    <string name="wait_time">Wait Time</string>
    <string name="visit_rating">Visit Rating</string>
    <string name="comments_concerns">Comments/Concerns</string>
    <string name="physician_name">Physician Name</string>
    <string name="edit_personal_information">Edit Personal Information</string>
    <string name="submit">Submit</string>
    <string name="create_an_appointment">Create an Appointment:</string>
    <string name="urgent_care">Urgent Care</string>
    <string name="checkup">Checkup</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="accident_or_fall">Accident or fall</string>
    <string name="breathing_difficulty">Breathing difficulty</string>
    <string name="back_problem">Back problem</string>
    <string name="reason_for_visit">Reason for visit:</string>
    <string name="sprain_or_broken_bone">Sprain or broken bone</string>
    <string name="abdominal_pain">Abdominal pain</string>
    <string name="other">Other</string>
    <string name="chest_pain_or_pressure">Chest pain or pressure</string>
    <string name="bleeding_or_cuts">Bleeding or cuts</string>
    <string name="high_fever">High fever</string>
    <string name="vomiting_diarrhea_dehydration">Vomiting, diarrhea, dehydration</string>
    <string name="sore_throat_or_cough">Sore throat or cough</string>
    <string name="asthma">Asthma</string>
    <string name="burns">Burns</string>
    <string name="poisoning">Poisoning</string>
    <string name="rate_your_pain">Rate your pain:</string>
    <string name="mild">Mild</string>
    <string name="severe">Severe</string>
    <string name="moderate">Moderate</string>
    <string name="title_activity_scrolling_test">scrolling_test</string>
    <string name="walk_in">Walk-in</string>
    <string name="additional_information">Additional Information:</string>
    <string name="pre_check">Pre-check</string>

    <string-array name="gender_array">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="title_activity_account_page_f">AccountPageF</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_appointment_reasons_f">AppointmentReasonsF</string>
    <string name="title_activity_canceled_page_f">ActivityCanceledPageF</string>
    <string name="title_activity_choose_appointment_f">ActivityChooseAppointmentF</string>
    <string name="title_activity_edit_info_f">ActivityEditInfoF</string>
    <string name="title_activity_extra_appt_info_f">ActivityExtraApptInfoF</string>
    <string name="_7_minutes">7 Minutes</string>
    <string name="feedback">Feedback</string>

</resources>
