<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonalInfo">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".PersonalInfo">

        <TextView
            android:id="@+id/firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="112dp"
            android:layout_marginLeft="112dp"
            android:layout_marginTop="23dp"
            android:text="@string/first_name"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/lastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/last_name2"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/firstName"
            app:layout_constraintTop_toBottomOf="@+id/firstName" />

        <TextView
            android:id="@+id/dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/date_of_birth"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/lastName"
            app:layout_constraintTop_toBottomOf="@+id/lastName" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/emailnew"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/dob"
            app:layout_constraintTop_toBottomOf="@+id/dob" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/gender"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/email"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="92dp"
            android:layout_marginLeft="92dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="92dp"
            android:layout_marginRight="92dp"
            android:text="@string/personal_information"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/signOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="161dp"
            android:layout_marginLeft="161dp"
            android:layout_marginTop="8dp"
            android:background="#FCAE00"
            android:text="@string/sign_out"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editInfo" />

        <TextView
            android:id="@+id/u_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/peter"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/firstName"
            app:layout_constraintStart_toEndOf="@+id/firstName" />

        <TextView
            android:id="@+id/u_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/lastName"
            app:layout_constraintStart_toEndOf="@+id/lastName" />

        <TextView
            android:id="@+id/u_dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/_09_27_1941"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/dob"
            app:layout_constraintStart_toEndOf="@+id/dob" />

        <TextView
            android:id="@+id/u_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/spiderpig_op_com"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/email"
            app:layout_constraintStart_toEndOf="@+id/email" />

        <TextView
            android:id="@+id/u_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/male"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/gender"
            app:layout_constraintStart_toEndOf="@+id/gender" />

        <Button
            android:id="@+id/editInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="68dp"
            android:background="#313131"
            android:onClick="editInfo"
            android:text="@string/edit_info"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gender" />

        <Button
            android:id="@+id/feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="8dp"
            android:background="#005E9D"
            android:onClick="feedback"
            android:text="@string/feedback"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signOut" />

    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FCAE00"
        app:itemIconTint="#FFFFFF"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/navigation" />
</android.support.constraint.ConstraintLayout>
